--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <audio preload="auto" crossorigin="anonymous" controls src="test2.mp3"></audio>
+    <br>
+    <canvas></canvas>
     <script src="index.js"></script>
   </body>
 </html>
