--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <audio preload="auto" crossorigin="anonymous" controls src="test2.mp3"></audio>
+    <audio preload="auto" crossorigin="anonymous" controls src="sample-15s.mp3"></audio>
     <br>
     <canvas></canvas>
     <script src="index.js"></script>
