--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <div class="flex">
       <h1>Audio Viewer</h1>
     <input type="file" id="input"/>
+    <button class="fileButton">Upload Song</button>
     <select>
       <option>Sample1.mp3</option>
       <option>Sample2.mp3</option>
     </select>
     <canvas></canvas>
     <audio preload="auto" crossorigin="anonymous" controls src="Sample1.mp3"></audio>
+    <button class="color">Change Color Pallette</button>
   </div>
     <script src="index.js"></script>
   </body>
