--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </select>
     <canvas></canvas>
     <audio preload="auto" crossorigin="anonymous" controls src="Sample1.mp3"></audio>
-    <button class="color">Change Color Pallette</button>
+    <button class="color">Change Theme</button>
   </div>
     <script src="index.js"></script>
   </body>
