add multiple file support

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="flex">
       <h1>Audio Viewer</h1>
-    <input type="file" id="input"/>
-    <button class="fileButton">Upload Song</button>
+    <input multiple type="file" id="input"/>
+    <button class="fileButton">Add Song</button>
     <select>
       <option>Sample1.mp3</option>
       <option>Sample2.mp3</option>
