--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="flex">
       <h1>Audio Viewer</h1>
-    <input multiple type="file" id="input"/>
+    <input multiple type="file" accept="audio/*" id="input"/>
     <button class="fileButton">Add Song</button>
     <select>
       <option>Sample1.mp3</option>
