--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   <body>
     <div class="flex">
       <h1>Audio Viewer</h1>
-    <input multiple type="file" accept="audio/*" id="input"/>
+      <div id="start"><svg fill="currentcolor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80L0 432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/></svg></div>
+    <input multiple type="file" id="input"/>
     <button class="fileButton">Add Song</button>
     <select>
       <option>Sample1.mp3</option>
       <option>Sample2.mp3</option>
     </select>
     <canvas></canvas>
-    <audio crossorigin="anonymous" preload="auto" controls src="./Sample1.mp3"></audio>
+    <audio preload="auto" src="./Sample1.mp3"></audio>
     <button class="color">Change Theme</button>
   </div>
     <script src="index.js"></script>
