--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <option>Sample2.mp3</option>
     </select>
     <canvas></canvas>
-    <audio preload="auto" src="./Sample1.mp3"></audio>
+    <audio preload="auto" controls src="./Sample1.mp3"></audio>
     <button class="color">Change Theme</button>
   </div>
     <script src="index.js"></script>
